--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,15 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+input, button{
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+}
+a{
+  text-decoration: none;
 }
