--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,12 +4,31 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Inter';
+  src: url('../assets/fonts/Inter-Regular.ttf') format('opentype'); /* Adjust the path as necessary */
+  font-weight: normal;
+  font-style: normal;
+   font-display: swap;
+}
+
+body {
+  font-family: 'Inter' ;
+    margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
   font-family: Inter;
+  overflow-x: hidden;
 }
+
+
 
 html, body{
   width: 100%;
